Fixed: Calendar tooltips won't be hidden behind buttons

--- a/src/UI/Content/Overrides/fullcalendar.less
+++ b/src/UI/Content/Overrides/fullcalendar.less
@@ -19,3 +19,9 @@
     padding-left: 5px;
   }
 }
+
+.fc-header {
+  .fc-state-active {
+    z-index: 1;
+  }
+}
